fix: Add no border to intro heading links after wrapping in nav element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,10 @@ a:hover, .active {
     margin-bottom: 50px;
 }
 
+.intro-heading > a:hover {
+    border-bottom: none;
+}
+
 .intro-heading a {
     padding: 2%;
 }
